--- a/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
@@ -30,11 +30,20 @@
 								class="form-control"></textarea>
 						</div>
 						<div class="form-group">
-						    <label for="notType">유형</label>
-						    <select th:field="*{notType}" id="notType" class="form-control">
-						        <option value="">-- 유형을 선택하세요 --</option>
-						        <option th:each="type : ${noticeTypes}" th:value="${type}" th:text="${type}"></option>
-						    </select>
+							<label for="notType">유형</label> <select th:field="*{notType}"
+								id="notType" class="form-control">
+								<option value="">-- 유형을 선택하세요 --</option>
+
+								<th:block th:if="${isAdmin}">
+									<option value="전체공지">전체공지</option>
+									<option th:each="dept : ${departments}"
+										th:value="${dept.comDtNm}" th:text="${dept.comDtNm}"></option>
+								</th:block>
+
+								<th:block th:unless="${isAdmin}">
+									<option th:value="${empDeptName}" th:text="${empDeptName}"></option>
+								</th:block>
+							</select>
 						</div>
 
 						<div class="form-group">
