--- a/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
@@ -30,13 +30,22 @@
 				<div class="card-header py-3 d-flex align-items-center justify-content-between">
 				    <h6 class="m-0 font-weight-bold text-primary">출근한 나의 부서인원 근태현황</h6>
 				    
-				    <div class="d-flex align-items-center gap-2">
-					    <input type="date" name="startDate" class="form-control form-control-sm" th:value="${startDate}">~
-					    <input type="date" name="endDate" class="form-control form-control-sm" th:value="${endDate}">
-					    <button type="submit" id="searchBtn" class="btn btn-primary btn-sm" style="min-width: 80px;">조회</button>
-				        <button id="checkInBtn" class="btn btn-primary btn-sm" style="min-width: 80px;">출근</button>
-				        <button id="checkOutBtn" class="btn btn-primary btn-sm" style="min-width: 80px;">퇴근</button>
-				    </div>
+<!-- 				    <div class="d-flex align-items-center gap-2"> -->
+<!-- 					    <input type="date" name="startDate" class="form-control form-control-sm" th:value="${startDate}">~ -->
+<!-- 					    <input type="date" name="endDate" class="form-control form-control-sm" th:value="${endDate}"> -->
+<!-- 					    <button type="submit" id="searchBtn" class="btn btn-primary btn-sm" style="min-width: 80px;">조회</button> -->
+<!-- 				        <button id="checkInBtn" class="btn btn-primary btn-sm" style="min-width: 80px;">출근</button> -->
+<!-- 				        <button id="checkOutBtn" class="btn btn-primary btn-sm" style="min-width: 80px;">퇴근</button> -->
+<!-- 				    </div> -->
+					<div class="d-flex align-items-center gap-4">
+					    <input type="date" name="startDate" class="form-control form-control-sm me-3" th:value="${startDate}">
+					    <span class="mx-1">~</span>
+					    <input type="date" name="endDate" class="form-control form-control-sm me-4" th:value="${endDate}" style="min-width:80px; margin-right:20px;">
+					
+					    <button type="submit" id="searchBtn" class="btn btn-primary btn-sm me-3" style="min-width:80px; margin-right:240px;">조회</button>
+					    <button id="checkInBtn" class="btn btn-primary btn-sm me-3" style="min-width: 80px; margin-right:100px;">출근</button>
+					    <button id="checkOutBtn" class="btn btn-primary btn-sm" style="min-width: 80px; margin-right:260px;">퇴근</button>
+					</div>
 				</div>
 	            <div class="card-body">
 	                <div class="table-responsive">
@@ -44,29 +53,29 @@
 	                        <thead>
 		                        <tr>
 		                            <th>날짜</th>
-		                            <th>출근시간</th>
-		                            <th>퇴근시간</th>
 		                            <th>사번</th>
 		                            <th>사원 이름</th>
 		                            <th>부서</th>
 		                            <th>직책</th>
+		                            <th>출근시간</th>
+		                            <th>퇴근시간</th>
 		                            <th>근무상태</th>
 		                        </tr>
 	                        </thead>
 	                        <tbody>
 		                        <tr th:each="c : ${commuteDTOList}" id="commuteTable" th:data-empid="${c.empId}">
 		                            <td th:text="${c.commuteDate}"></td>
-									<td th:text="${#temporals.format(c.checkInTime, 'HH:mm:ss')}"></td>
-									<td th:text="${#temporals.format(c.checkOutTime, 'HH:mm:ss')}"></td>
 		                            <td th:text="${c.empId}"></td>
 		                            <td th:text="${c.empName}"></td>
 		                            <td th:text="${c.deptName}"></td>
 		                            <td th:text="${c.posName}"></td>
+									<td th:text="${#temporals.format(c.checkInTime, 'HH:mm:ss')}"></td>
+									<td th:text="${#temporals.format(c.checkOutTime, 'HH:mm:ss')}"></td>
 		                            <td th:text="${c.workStatusNm}"></td>
 		                        </tr>
-		                            <tr th:if="${#lists.isEmpty(commuteDTOList)}">
-								        <td colspan="8" class="text-center text-muted">출근한 사람이 없습니다.</td>
-								    </tr>
+	                            <tr th:if="${#lists.isEmpty(commuteDTOList)}">
+							        <td colspan="8" class="text-center text-muted">출근한 사람이 없습니다.</td>
+							    </tr>
 	                        </tbody>
 	                    </table>
 	                </div>
