--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
@@ -93,7 +93,7 @@
 										<!-- ******************첨부파일*************************-->
 										<td rowspan="3" class="text-center">
 											<div class="photo-wrapper-regist">
-												<input class="form-control" type="file" id="emp_pi" name="file1" onchange="employeePhoto(event);">
+												<input class="form-control" type="file" id="emp_pi" name="empImg" onchange="employeePhoto(event);">
 											</div>
 										</td>
 
