--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -8,6 +8,8 @@
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
 <meta name="author" content="">
+<meta name="_csrf" th:content="${_crsf.token}">
+<meta name="_csrf_header" th:content="${_crsf.headerName}">
 
 <title>부산 아아티윌</title>
 
