--- a/bootstrap_stater/src/main/resources/templates/commute/annual_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/annual_list.html
@@ -60,7 +60,7 @@
 					<div class="card-header py-3 d-flex justify-content-between align-items-center" style="background-color: #f3f4f7;">
 						<h6 class="m-0 font-weight-bold">오늘의 연차사원</h6>
                     </div>
-                     <div class="card-body" id="todayAnnArea">
+                     <div class="card-body" id="todayAnnArea" style="height: 307px; overflow-y: auto;">
                      	<table id ="todayAnnTable" class="table table-bordered">
 							
 						</table>
