--- a/bootstrap_stater/src/main/resources/templates/commute/admin_commute_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/admin_commute_list.html
@@ -7,6 +7,11 @@
     <th:block layout:fragment="style">
 <!--                <link rel="stylesheet" th:href="@{/css/item_main.css}" /> -->
     </th:block>
+    <style>
+    #deleteModalMessage {
+    white-space: pre-line; /* \n을 줄바꿈으로 표시 */
+}
+    </style>
 </head>
 <body>
 	<th:block layout:fragment="content">
@@ -84,8 +89,8 @@
 								    <td>
 								    	<button class="deleteBtn btn btn-danger btn-sm"
 								    			th:data-emp-id="${c.empId}"
-								    			th:data-commute-date="${commuteDate}"
-								    			th:data-check-in-time="${c.checkInTime}"
+								    			th:data-commute-date="${c.commuteDate}"
+								    			th:data-check-in-time="${#temporals.format(c.checkInTime, 'yyyy-MM-dd HH:mm:ss')}"
 								    	 		style="min-width: 80px;">삭제
 								    	 </button>
 								    </td>
@@ -191,10 +196,10 @@
 		        const modalMsg = document.getElementById("deleteModalMessage");
 		        if(modalMsg) {
 		            modalMsg.textContent =
-		                "사원ID: " + empId +
-		                ", 날짜: " + commuteDate +
-		                ", 출근기록: " + checkInTime +
-		                " 출근기록을 삭제하시겠습니까?";
+		                "사원ID : " + empId + "\n" + 
+		                "날짜 : " + commuteDate + "\n" +
+		                "출근기록 : " + checkInTime + "\n" +
+		                "출근기록을 삭제하시겠습니까?";
 		        }
 
 		        // 모달 열기
