--- a/bootstrap_stater/src/main/resources/templates/layouts/layout.html
+++ b/bootstrap_stater/src/main/resources/templates/layouts/layout.html
@@ -9,8 +9,8 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<meta name="_csrf_token" th:content="${_crsf.token}">
-<meta name="_csrf_header" th:content="${_crsf.headerName}">
+<meta name="_csrf" th:content="${_csrf.token}">
+<meta name="_csrf_header" th:content="${_csrf.headerName}">
 
 <title>부산 아아티윌</title>
 
