--- a/bootstrap_stater/src/main/resources/static/bootstrap/css/annual/annual.css
+++ b/bootstrap_stater/src/main/resources/static/bootstrap/css/annual/annual.css
@@ -74,4 +74,17 @@ input[type="search"] {
 }
 
 
-/* 차트 */
+/* 오늘의 연차자 */
+.leave-btn {
+  display: inline-block;
+  padding: 4px 10px;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bold;
+  width: 65px;
+  height: 25px;
+  text-align: center;
+}
+
+.leave-full { background-color: #4caf50; }   /* 연차 - 초록 */
+.leave-half { background-color: #ff9800; }   /* 반차 - 주황 */
