--- a/bootstrap_stater/src/main/resources/templates/gw/docWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/docWrite.html
@@ -58,7 +58,7 @@
 				['color', ['color']],
 				['para', ['ul', 'ol', 'paragraph']],
 				['table', ['table']],
-				['insert', ['link', 'picture']],
+				['insert', ['link']],
 				['view', ['fullscreen', 'codeview', 'help']]
 			]
 		});
