기안서 작성 로직 변경예정

--- a/bootstrap_stater/src/main/resources/templates/approval/appr_doc_list.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/appr_doc_list.html
@@ -13,11 +13,11 @@
     <div class="container-fluid">
         <!-- Page Heading -->
         <h1 class="h3 mb-2 text-gray-800">기안서작성</h1>
-        <p class="mb-4">검색창</p>
+        <p class="mb-4">검색창 위치</p>
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">기안서 작성</h6>
+                <h6 class="m-0 font-weight-bold text-primary">기안서 작성 (공통문서에서 가져오는걸로 로직 변경예정)</h6>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
@@ -55,7 +55,8 @@
                         </tbody>
                     </table>
                 </div>
-                <nav aria-label="Page navigation">
+                <!--마지막 단계  -->
+                <!-- <nav aria-label="Page navigation">
                     <ul class="pagination justify-content-center">
                         <li class="page-item disabled">
                             <a class="page-link" href="#" tabindex="-1" aria-disabled="true">이전</a>
@@ -67,7 +68,7 @@
                             <a class="page-link" href="#">다음</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
             </div>
         </div>
     </div>
