--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -70,7 +70,8 @@
 						<h6 class="collapse-header">인사관리 메뉴:</h6>
 						<a class="collapse-item" th:href="@{/personnel/current}">인사현황</a>
 						<a class="collapse-item" th:href="@{/personnel/regist}">인사등록</a>
-						<a class="collapse-item" th:href="@{/personnel/orgChart}">조직도</a>
+						<a class="collapse-item" th:href="@{/personnel/trans}">인사발령</a>
+						<a class="collapse-item" th:href="@{/personnel/orgChart}">조직도</a>						
 					</div>
 				</div></li>
 
